--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -26,7 +26,7 @@
             <a href="#" class="nav-link">Billing <span>▼</span></a>
             <div class="dropdown-content">
                 <a asp-controller="Homeowner" asp-action="Payment" class="dropdown-link">Make Payment</a>
-                <a href="#" class="dropdown-link">View History</a>
+                <a asp-controller="Homeowner" asp-action="History" class="dropdown-link">View History</a>
             </div>
         </li>
         <li class="nav-item">
@@ -49,7 +49,7 @@
             <img src="~/images/user-default-picture.jpg" alt="User profile" />
             <!-- Dropdown Menu -->
             <div class="profile-dropdown">
-                <a href="#" class="dropdown-link">Settings</a>
+                <a asp-controller="Homeowner" asp-action="UserProfile" class="dropdown-link">Settings</a>
                 <!-- Log Out Form -->
                 <form asp-controller="Home" asp-action="LogOut" method="post" class="dropdown-link-form">
                     <button type="submit" class="dropdown-link">Log Out</button>
