--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -13,7 +13,7 @@
     <h1>Welcome Back</h1>
 
     <!-- The form will submit to the LoginTask action in the Home controller -->
-    <form asp-action="LoginTask" asp-controller="Home" method="post">
+    <form asp-action="LoginTask" asp-controller="Home">
         <div class="form-group">
             <label for="Username" class="control-label">Username</label>
             <div class="input-icon">
