landing page fix content

--- a/Views/Shared/Dashboard_Nav.cshtml
+++ b/Views/Shared/Dashboard_Nav.cshtml
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
 <nav class="navbar">
     <!-- Logo -->
     <a href="#" class="logo">
@@ -45,7 +46,7 @@
 
         <!-- User Profile with Dropdown -->
         <div class="user-profile" onclick="toggleProfileDropdown()">
-            <span>John Smith</span>
+            <span>@ViewBag.fullname</span>
             <img src="~/images/user-default-picture.jpg" alt="User profile" />
             <!-- Dropdown Menu -->
             <div class="profile-dropdown">
