--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <!-- Logo -->
         <a class="logo text-decoration-none text-reset" asp-controller="Home" asp-action="Index">
-            Home<span>Owner</span>
+            Home<span>Sphere</span>
         </a>
         <!-- Navigation Links -->
         <ul class="nav-links">
